# bazel-registry

./: BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: README.md  conformance.yml  ratchet.yml  report.yml
modules/botnoc/: metadata.json
modules/brand/: metadata.json
modules/brando/: metadata.json
modules/buildbarn/: metadata.json
modules/decomposer/: metadata.json
modules/fastverk-app/: metadata.json
modules/firefox_spidermonkey/: metadata.json
modules/forge/: metadata.json
modules/fvkit/: metadata.json
modules/meridian/: metadata.json
modules/meridian_schemas/: metadata.json
modules/meridian_tui/: metadata.json
modules/meridian_uiview_core/: metadata.json
modules/meridian_web/: metadata.json
modules/pinax/: metadata.json
modules/polyglot_ast/: metadata.json
modules/rules_agentic_ide/: metadata.json
modules/rules_aip/: metadata.json
modules/rules_autoconf/: metadata.json
modules/rules_aws_workflows/: metadata.json
modules/rules_beam/: metadata.json
modules/rules_bibtex/: metadata.json
modules/rules_board/: metadata.json
modules/rules_bun/: metadata.json
modules/rules_cc_cross/: metadata.json
modules/rules_cc_host/: metadata.json
modules/rules_chisel/: metadata.json
modules/rules_chrome/: metadata.json
modules/rules_ci/: metadata.json
modules/rules_ci_ir/: metadata.json
modules/rules_cloudformation/: metadata.json
modules/rules_docker/: metadata.json
modules/rules_eslint/: metadata.json
modules/rules_fastverk/: metadata.json
modules/rules_firefox/: metadata.json
modules/rules_github/: metadata.json
modules/rules_gitlab/: metadata.json
modules/rules_graphviz/: metadata.json
modules/rules_helm/: metadata.json
modules/rules_huggingface/: metadata.json
modules/rules_jena/: metadata.json
modules/rules_jsonschema/: metadata.json
modules/rules_kicad/: metadata.json
modules/rules_lang/: metadata.json
modules/rules_lean/: metadata.json
modules/rules_lora/: metadata.json
modules/rules_macvm/: metadata.json
modules/rules_markdown/: metadata.json
modules/rules_mdbook/: metadata.json
modules/rules_meridian/: metadata.json
modules/rules_meson/: metadata.json
modules/rules_microkit/: metadata.json
modules/rules_microkit_tool/: metadata.json
modules/rules_nextjs/: metadata.json
modules/rules_openapi/: metadata.json
modules/rules_podman/: metadata.json
modules/rules_polyglot/: metadata.json
modules/rules_postgres/: metadata.json
modules/rules_puml/: metadata.json
modules/rules_qemu/: metadata.json
modules/rules_rdf/: metadata.json
modules/rules_readme/: metadata.json
modules/rules_riscv_core/: metadata.json
modules/rules_runpod/: metadata.json
modules/rules_schema_org/: metadata.json
modules/rules_sel4/: metadata.json
modules/rules_spec/: metadata.json
modules/rules_ssh_tui/: metadata.json
modules/rules_storybook/: metadata.json
modules/rules_uv/: metadata.json
tools/rels/: BUILD.bazel  Cargo.toml
tools/rels/src/: audit.rs  bump.rs  common.rs  deps.rs  main.rs  matrix.rs  mcp.rs  release.rs  scaffold.rs
(+600 files in other folders)
