[package]
name = "rels"
version = "0.1.0"
edition = "2021"
description = "CLI for managing the fastverk bazel-registry: cut releases, audit cross-repo state, bump shared deps, and emit status matrices."
publish = false

[[bin]]
name = "rels"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tar = "0.4"
walkdir = "2.5"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
